Fix ListZone: Adding filtering feature
