# controllers/zone_controller.go
@@ -4,6 +4,7 @@ import (
 	"context"
 	"log"
 	"net/http"
+	"strings"
 	"time"
 
 	"github.com/gin-gonic/gin"
@@ -17,14 +18,86 @@ import (
 
 var zoneCollection *mongo.Collection = configs.GetCollection(configs.DB, "zones")
 
-// GetZone godoc
-// @Router /queries/zones [get]
+// ListZones godoc
 // @Tags location
 // @Summary Query the information about one or more specific zones or a list of zones.
 // @Description The GET method is used to query the information about one or more specific zones or a list of zones.
 // @Id zonesGET
 // @Produce json
-// success 200 {array} ZoneResponse
+// @Param zoneId query []string false "Zone ID"
+// @Success 200 {object} []responses.ZoneResponse
+// @Failure 500
+// @Router /queries/zones [get]
+func ListZones() gin.HandlerFunc {
+	return func(c *gin.Context) {
+		var shouldFilter bool
+		ctx, cancel := context.WithTimeout(context.Background(), 10*time.Second)
+		defer cancel()
+
+		// get the zone ids from the query parameters
+		zoneIds := c.QueryArray("zoneId")
+		if zoneIds != nil {
+			zoneIds = strings.Split(zoneIds[0], ",")
+			shouldFilter = len(zoneIds) > 0
+		}
+
+		cursor, err := zoneCollection.Find(ctx, bson.M{})
+		if err != nil {
+			log.Printf("error getting zones: %v", err)
+			c.JSON(http.StatusInternalServerError, gin.H{"error": "Error fetching zones"})
+			return
+		}
+
+		var zones []models.Zone
+		if err = cursor.All(ctx, &zones); err != nil {
+			log.Printf("error decoding zones: %v", err)
+			c.JSON(http.StatusInternalServerError, gin.H{"error": "Error fetching zones"})
+			return
+		}
+
+		var zrs []responses.ZoneResponse
+		if shouldFilter {
+			for _, zone := range zones {
+				for _, zoneId := range zoneIds {
+					if zone.Id == zoneId {
+						zrs = append(zrs, responses.ZoneResponse{
+							ZoneId:                            zone.Id,
+							NumberOfAccessPoints:              0,
+							NumberOfUnserviceableAccessPoints: 0,
+							NumberOfUsers:                     0,
+							ResourceURL:                       utils.ConstructZoneResourceUrl(c.Request, zone.Id),
+						})
+					}
+				}
+			}
+		} else {
+			for _, zone := range zones {
+				zrs = append(zrs, responses.ZoneResponse{
+					ZoneId:                            zone.Id,
+					NumberOfAccessPoints:              0,
+					NumberOfUnserviceableAccessPoints: 0,
+					NumberOfUsers:                     0,
+					ResourceURL:                       utils.ConstructZoneResourceUrl(c.Request, zone.Id),
+				})
+			}
+		}
+		c.JSON(http.StatusOK, zrs)
+	}
+}
+
+// GetZone godoc
+// @Tags location
+// @Summary Query information about a specific zone
+// @Description The GET method is used to query the information about a specific zone.
+// @Id zoneGetById
+// @Produce json
+// @Param	zoneId	path	string	true	"Zone ID"
+// @Success	200 {object}	responses.ZoneResponse
+// @Failure	400	"Bad Request"
+// @Failure	404	"Not found"
+
+// @Failure	500	"Internal Server Error"
+// @Router /queries/zones/{zoneId} [get]
 func GetZone() gin.HandlerFunc {
 	return func(c *gin.Context) {
 		var zone models.Zone
@@ -56,39 +129,5 @@ func GetZone() gin.HandlerFunc {
 		}
 		// TODO: Process Zone Information here before returning
 		c.JSON(http.StatusOK, zr)
-	}
-}
-
-// TODO: Add zoneId as query parameter to filter zones (GS MEC 013 - 7.7.3.1-1)
-func ListZones() gin.HandlerFunc {
-	return func(c *gin.Context) {
-		ctx, cancel := context.WithTimeout(context.Background(), 10*time.Second)
-		defer cancel()
-
-		cursor, err := zoneCollection.Find(ctx, bson.M{})
-		if err != nil {
-			log.Printf("error getting zones: %v", err)
-			c.JSON(http.StatusInternalServerError, gin.H{"error": "Error fetching zones"})
-			return
-		}
-
-		var zones []models.Zone
-		if err = cursor.All(ctx, &zones); err != nil {
-			log.Printf("error decoding zones: %v", err)
-			c.JSON(http.StatusInternalServerError, gin.H{"error": "Error fetching zones"})
-			return
-		}
-
-		var zrs []responses.ZoneResponse
-		for _, zone := range zones {
-			zrs = append(zrs, responses.ZoneResponse{
-				ZoneId:                            zone.Id,
-				NumberOfAccessPoints:              0,
-				NumberOfUnserviceableAccessPoints: 0,
-				NumberOfUsers:                     0,
-				ResourceURL:                       utils.ConstructZoneResourceUrl(c.Request, zone.Id),
-			})
-		}
-		c.JSON(http.StatusOK, zrs)
 	}
 }
